log
Sun 17 Sep 2023 01:24:08 AM UTC: 
 treemap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
178bf8d
Sun 17 Sep 2023 01:52:27 AM UTC: 
 treemap.c | 46 +++++++++++++++++++++++++++++++++++-----------
 1 file changed, 35 insertions(+), 11 deletions(-)
 tests:  6|7
total_score: 5/70
740fe62
Sun 17 Sep 2023 01:55:42 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
143e8a6
Sun 17 Sep 2023 01:56:12 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
c93d743
Sun 17 Sep 2023 01:57:23 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
464383b
Sun 17 Sep 2023 02:09:57 AM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  6|7
total_score: 5/70
31a461c
Sun 17 Sep 2023 02:10:20 AM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  6|7
total_score: 5/70
301d470
Sun 17 Sep 2023 02:11:13 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
c01091e
Sun 17 Sep 2023 02:21:26 AM UTC: 
 treemap.c | 46 +++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 45 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
67fd31d
Sun 17 Sep 2023 02:26:45 AM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  6|7
total_score: 5/70
e5352b4
Sun 17 Sep 2023 02:30:03 AM UTC: 
 treemap.c | 23 ++++++++++++-----------
 1 file changed, 12 insertions(+), 11 deletions(-)
 tests:  6|7
total_score: 5/70
547ecb3
Sun 17 Sep 2023 02:33:42 AM UTC: 
 treemap.c | 24 +++++++++++++++---------
 1 file changed, 15 insertions(+), 9 deletions(-)
 tests:  6|7
total_score: 5/70
acf90a4
Sun 17 Sep 2023 02:35:39 AM UTC: 
 treemap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  8|6
total_score: 5/70
7fc3fbe
Sun 17 Sep 2023 02:50:27 AM UTC: 
 treemap.c | 62 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 61 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:154:30: error: implicit declaration of function ‘minimun’; did you mean ‘minimum’? [-Werror=implicit-function-declaration]
  154 |     TreeNode * minimumNode = minimun(node->right);
      |                              ^~~~~~~
      |                              minimum
treemap.c:154:30: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
ccf0f39
Sun 17 Sep 2023 02:50:45 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|6
total_score: 5/70
0a08e58
Sun 17 Sep 2023 02:51:31 AM UTC: 
 treemap.c | 22 ++++++++--------------
 1 file changed, 8 insertions(+), 14 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:146:3: error: expected ‘}’ before ‘else’
  146 |   else if (node->left != NULL && node->right != NULL)
      |   ^~~~
Compilation failed
ed99b45
Sun 17 Sep 2023 02:51:46 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|6
total_score: 5/70
3100254
Sun 17 Sep 2023 02:55:18 AM UTC: 
 treemap.c | 22 +++++++++++++---------
 1 file changed, 13 insertions(+), 9 deletions(-)
 tests:  9|6
total_score: 10/70
fa1ae38
Sun 17 Sep 2023 02:55:41 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|6
total_score: 5/70
a097a6b
Sun 17 Sep 2023 02:55:50 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|6
total_score: 10/70
574ad7e
Sun 17 Sep 2023 02:58:26 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|5
total_score: 20/70
8a211df
Sun 17 Sep 2023 03:03:07 AM UTC: 
 treemap.c | 36 +++++++++++++++++-------------------
 1 file changed, 17 insertions(+), 19 deletions(-)
 tests:  7|6
total_score: 5/70
7ce4798
Sun 17 Sep 2023 03:03:19 AM UTC: 
 treemap.c | 36 +++++++++++++++++++-----------------
 1 file changed, 19 insertions(+), 17 deletions(-)
 tests:  7|6
total_score: 5/70
9831879
Sun 17 Sep 2023 03:03:35 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|5
total_score: 20/70
e12fafd
Sun 17 Sep 2023 03:09:28 AM UTC: 
 treemap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:234:25: error: expected ‘;’ before ‘}’ token
  234 |     return current->pair
      |                         ^
      |                         ;
  235 |   }
      |   ~                      
Compilation failed
e3f6fb1
Sun 17 Sep 2023 03:09:38 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|4
total_score: 25/70
ee338c7
Sun 17 Sep 2023 03:13:35 AM UTC: 
 treemap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  18|3
total_score: 40/70
420a5a9
